2011-02-22  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] QWebView ignores a palette set with QWebView::setPalette()
        https://bugs.webkit.org/show_bug.cgi?id=31742

        Use custom QWebView palette if the view provides one.
        Modified version of a patch made by Fabrizio Machado.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::platformActiveSelectionBackgroundColor):
        (WebCore::RenderThemeQt::platformInactiveSelectionBackgroundColor):
        (WebCore::RenderThemeQt::platformActiveSelectionForegroundColor):
        (WebCore::RenderThemeQt::platformInactiveSelectionForegroundColor):
        (WebCore::RenderThemeQt::platformFocusRingColor):
2011-02-22  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] QWebView ignores a palette set with QWebView::setPalette()
        https://bugs.webkit.org/show_bug.cgi?id=31742

        Test case to check that the palette sets on the QWebView is taken
        into account.

        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::setPalette_data):
        (tst_QWebView::setPalette):

Canonical link: https://commits.webkit.org/69329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79409 268f45cc-cd09-0410-ab3c-d52691b4dbfc